# hydra-once

./: .gitignore  README.md  pyproject.toml  pytest.ini
hydra_once/: __init__.py  _instantiate.py
tests/instantiate/: __init__.py  test_instantiate.py  test_once.py
